<resources>
    <string name="app_name">Diario Straordinari</string>

    <!-- Strings related to login -->
    <string name="prompt_matricola">Matricola</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="user_not_found">Matricola o password non corretti. Riprovare.</string>
    <string name="error_incorrect_password">Questa password non è corretta</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings uscita -->
    <string name="exit_request">"Stai per uscire dall'applicazione.\nSei sicuro?"
    </string>
    <string name="back_DBA_request">"Vuoi tornare al DBAActivity?"
    </string>


    <!-- Strings per i tipi di users leggibili dal DB -->
    <string name="user_developer">Developer</string>
    <string name="user_DBA">DBA</string>
    <string name="user_operaio">Operaio</string>
    <string name="user_error">TIPO USER NON CORRETTO</string>

    <!-- String per la tabella da selezionare nel DB -->
    <string name="table_firebase">AttoriTestApp</string>

    <!-- Strings per gli errori -->
    <!-- Work in progess -->
    <string name="work_in_progress">Work in progress...</string>
    <!-- Errori del DB -->
    <string name="log_e_DB_read">DB READ</string>
    <string name="log_e_DB_write">DB WRITE</string>
    <string name="error_DB_read">Errore di letttura del DataBase! Contattare un amministratore</string>
    <string name="error_DB_write">Errore di scrittura del DataBase! Contattare un amministratore</string>

    <!--Prova elementi Spinner -->
    <string-array name="attori_array">

        <item>DBA</item>
        <item>Developer</item>
        <item>Operaio</item>

    </string-array>

    <!--Prova elementi Spinner -->
    <string-array name="zone_array">

        <item>DM6A - Molise</item>
        <item>DM7A - L"Aquila-Teramo</item>
        <item>DM7B - Pescara-Chieti</item>

    </string-array>

    <string-array name="uo_array">

        <item>UO 1 - Campobasso</item>
        <item>UO 2 - Isernia</item>
        <item>UO 3 - Termoli</item>

        <item>UO 4 - L"Aquila</item>
        <item>UO 5 - Teramo</item>
        <item>UO 6 - Sulmona</item>

        <item>UO 7 - Pescara</item>
        <item>UO 8 - Chieti</item>
        <item>UO 9 - Vasto-Lanciano</item>

    </string-array>

    <string-array name="straodinario_effettuato_array">

        <item>Straordinario effettuato</item>
        <item>Straordinario da effettuare</item>

    </string-array>

    <string-array name="operai_array">

        <item>A254883 - Michele Spina</item>
        <item>A256720 - Giuseppe Tamburro</item>
        <item>A258243 - Emiliano Iagnemma</item>
        <item>A260419 - Andrea Desiato</item>
        <item>A260422 - Danilo Iannetta</item>
        <item>A262817 - Pasquale Menanno</item>
        <item>A436674 - Luca Mignogna</item>
        <item>A436728 - Michele Enzo Santone</item>
        <item>A438348 - Marco Spicciati</item>
        <item>A452597 - Alexander D\'Alessandro</item>
        <item>A452619 - Matteo Antenucci</item>
        <item>A455556 - Andrea Petrella</item>
        <item>A523974 - Antonio Patullo</item>
        <item>A525707 - Mario Griguoli</item>
        <item>A525796 - Luigi Felice Pette</item>
        <item>A526406 - Ciro Trivisonno</item>
        <item>A529037 - Armando Tesone</item>

    </string-array>

    <string-array name="comuni_array">

        <item>100 - Baranello</item>
        <item>101 - Boiano</item>
        <item>102 - Busso</item>
        <item>103 - Campobasso 1</item>
        <item>104 - Campobasso 2</item>
        <item>105 - Campobasso 3</item>
        <item>106 - Campochiaro</item>
        <item>107 - Campodipietra</item>
        <item>108 - Campolieto</item>
        <item>109 - Casalciprano</item>
        <item>110 - Castelbottaccio</item>
        <item>111 - Castellino Del Biferno</item>
        <item>112 - Castelmauro</item>
        <item>113 - Castropignano</item>
        <item>114 - Cercemaggiore</item>
        <item>115 - Cercepiccola</item>
        <item>116 - Civitacampomarano</item>
        <item>117 - Colle D\'Anchise</item>
        <item>118 - Duronia</item>
        <item>119 - Ferrazzano</item>
        <item>120 - Fossalto</item>
        <item>121 - Gambatesa</item>
        <item>122 - Gildone</item>
        <item>123 - Guardiaregia</item>
        <item>124 - Jelsi</item>
        <item>125 - Limosano</item>
        <item>126 - Lucito</item>
        <item>127 - Lupara</item>
        <item>128 - Macchia Valfortore</item>
        <item>129 - Matrice</item>
        <item>130 - Mirabello Sannitico</item>

    </string-array>

    <string-array name="tipo_straodinario_array">

        <item>Esigenze Programmabili - PGM</item>
        <item>Mantenimento Servizio Elettrico - SEL</item>
        <item>Necessità Tecnico Gestionali - GST</item>

    </string-array>
    <!-- Strings Form DBA -->
    <string name="textview_DBA">Tipo attore</string>
    <!-- Strings Form Operaio -->
    <string name="textview_intestazione">Unità operativa</string>
    <string name="textview_inizio">Data</string>
    <string name="textview_record_risorse">Risorse intervenute</string>
    <string name="textview_record_descrizione">Descrizione attività</string>
    <string name="motivo_straordinario">Motivo e descrizione dell"attività svolta</string>
    <string name="textview_record_descrizione_OraIn">Dalle</string>
    <string name="textview_record_descrizione_OraOut">Alle</string>
    <string name="action_print">Stampa</string>

    <!-- Strings New Operaio -->
    <string name="newIdTextView">Id</string>
    <string name="newNameTextView">Nome</string>
    <string name="newSurnameTextView">Cognome</string>
    <string name="newPassTextView">Password</string>
    <string name="insert_button">Inserisci</string>

    <!-- Strings descrizioni immagini -->
    <string name="logo_description">logo e-distribuzione</string>
    <string name="title_activity_login_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings snackbar -->
    <string name="salvataggio_riuscito">Salvataggio avvenuto con successo</string>

    <!-- Stringhe non valide per nuovi utenti -->
    <string name="error_invalid_id">ID non valido</string>
    <string name="error_invalid_nome">Nome non valido</string>
    <string name="error_invalid_cognome">Cognome non valido</string>
    <string name="error_invalid_password">Password non valida</string>


</resources>
