<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrea.diariostraordinari.Activity.OperaioActivity">

    <!-- Parto con una ScrollView per gestire lo scroll dello schermo su tutti gli elementi -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Contenitore generale per tutti gli elementi grafici -->
        <LinearLayout
            android:id="@+id/opContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Questa è una figata che mi è servita parecchie volte:
                 creo un contenitore vuoto in testa a tutto per settare il focus dell'activity in
                 cima alla lista degli elementi.
                 Lo faccio perché gli elementi editabili (testo e date/orari da inserire)
                 di default richiedono il focus
                 e quindi l'app "scrollerebbe" automaticamente in basso -->
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/opFakeLinearLayout_focus"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:focusable="true"></LinearLayout>

            <!-- Di qui in avanti utilizzo una tecnica che ho ereditato da una guida di grafica:
                 Ogni tipologia di elemento deve essere inserito in un contenitore per gestire
                 al meglio il Layout, questo permette di dare una struttura corretta e
                 fortemente personalizzabile allo stesso tempo -->
            <LinearLayout
                android:id="@+id/opIntestazioneLayout"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/opIntestazioneTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/element_margin"
                    android:hint="@string/textview_intestazione"
                    android:textSize="@dimen/hint_size" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/opZonaSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/element_margin"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item">
                </android.support.v7.widget.AppCompatSpinner>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/opUnitàOperativaSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/element_margin"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item">
                </android.support.v7.widget.AppCompatSpinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/opInizioLayout"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/opIninizioTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/element_margin"
                    android:hint="@string/textview_inizio"
                    android:textSize="@dimen/hint_size" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/opStraordinarioEffettuatoSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/element_margin"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item">
                </android.support.v7.widget.AppCompatSpinner>

                <DatePicker
                    android:id="@+id/opGiornoDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/element_margin"
                    android:layout_gravity="center_horizontal"
                    android:datePickerMode="spinner"
                    android:spinnersShown="true"
                    android:calendarViewShown="false">
                </DatePicker>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/opRecordLayout"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/opRecord_RisorsaLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/opRecord_RisorsaTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin"
                        android:hint="@string/textview_record_risorse"
                        android:textSize="@dimen/hint_size" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/opOperaioSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin"
                        tools:listitem="@layout/support_simple_spinner_dropdown_item">
                    </android.support.v7.widget.AppCompatSpinner>

                    <!-- *** DA IMPLEMENTARE *** -->
                    <!-- *** RIF. 4 *** -->
                    <!-- AGGIUNTA ALTRO OPERAIO -->

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/opRecord_DescrizioneLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/opRecord_DescrizioneTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin"
                        android:hint="@string/textview_record_descrizione"
                        android:textSize="@dimen/hint_size" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin">

                        <EditText
                            android:id="@+id/opDescrizioneLavoroEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/motivo_straordinario"
                            android:inputType="textMultiLine|textAutoCorrect"
                            android:minLines="5"
                            android:gravity="top|start"
                            android:scrollbars="vertical"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/opComuneSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin"
                        tools:listitem="@layout/support_simple_spinner_dropdown_item">
                    </android.support.v7.widget.AppCompatSpinner>

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/opTipoStraordinarioSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin"
                        tools:listitem="@layout/support_simple_spinner_dropdown_item">
                    </android.support.v7.widget.AppCompatSpinner>

                    <TextView
                        android:id="@+id/opRecord_Descrizione_OraInTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin"
                        android:hint="@string/textview_record_descrizione_OraIn"
                        android:textSize="@dimen/hint_size" />

                    <TimePicker
                        android:id="@+id/opTimePickerIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin"
                        android:layout_gravity="center_horizontal"
                        android:timePickerMode="spinner"></TimePicker>

                    <TextView
                        android:id="@+id/opRecord_Descrizione_OraOutTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin"
                        android:hint="@string/textview_record_descrizione_OraOut"
                        android:textSize="@dimen/hint_size" />

                    <TimePicker
                        android:id="@+id/opTimePickerOut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/element_margin"
                        android:layout_gravity="center_horizontal"
                        android:timePickerMode="spinner"></TimePicker>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/opStampa_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/element_margin"
                android:text="@string/action_print"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>


<!-- IMPORTATO DA VECCHIA APP -->
<!-- POTREBBE ESSERMI UTILE PER CONVERTIRE IL LAYOUT DA UNA SEMPLICE LISTA A UN'ACTIVITY
     CHE GESTISCE DELLE TASK CON SCROLL ORIZONTALE -->

<!--
    <?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:context="com.example.andrea.e_businesscard_beta.NuovoUtente">

<android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"/>
</android.support.design.widget.AppBarLayout>

<android.support.v4.view.ViewPager
    android:id="@+id/viewpager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"  />



<android.support.design.widget.FloatingActionButton
    android:id="@+id/fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:layout_margin="@dimen/fab_margin"
    android:src="@drawable/ic_add_circle_white_36dp" />

</android.support.design.widget.CoordinatorLayout>

-->